--- a/9364A-G6/website/style.css
+++ b/9364A-G6/website/style.css
@@ -37,7 +37,9 @@ header {
 
 /*NAV*/
 div.navigation{
-    width: 15%;
+    width: 16%;
+    height: 100vh;
+    background-color:#f7f5e6; 
     float: left;
 }
 nav {
@@ -46,48 +48,16 @@ nav {
     z-index: 100;
 }
 
-.horizontal ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333A56;
-    font-family: Grotesk Thin;
-}
-
-.horizontal ul li {
-    float: left;
-    list-style-type: none;
-}
-
-.horizontal li a {
-    font-size: 15px;
-    font-size: calc(12px + 0.7vw);
-    display: block;
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.horizontal li a:visited{
-    
-}
-
-.horizontal li a:hover {
-    background-color: #111;
-}
-
 div.link{
     font-family: Grotesk;
     display: block;
     padding: 0;
     width: 100%;
     height: 35px;
-    line-height: 40px;
     overflow: auto;
     text-align: center;
     border-radius: 10px;
-    margin: 5px;
+    margin-top: 5px;
     background-color: #f7f5e6;
 }
 
@@ -121,6 +91,11 @@ div.link a {
     color: #333A56;
     padding: 10px 12px;
     text-decoration: none;
+}
+
+.vertical ul li:first-child a{
+    background-color: #52658F;
+    color: white;
 }
 
 .horizontal li a:hover {
