--- a/website_bootstrap/src/css/style.css
+++ b/website_bootstrap/src/css/style.css
@@ -2,6 +2,20 @@ body {
   font-family: 'Hind';
   background-color: #eddbcd !important; }
 
+.code-sample {
+  background-color: #cccccc;
+  border: 1px solid #c98474;
+  border-radius: 1em;
+  padding: 1em 2em;
+  height: auto;
+  font-family: Consolas;
+  font-size: 1.3em;
+  margin-bottom: 1em; }
+  .code-sample .comment {
+    color: gray !important; }
+  .code-sample .indent {
+    margin-left: 1em; }
+
 h3 {
   font-weight: bold; }
 
@@ -98,8 +112,11 @@ div .jumbotron {
 .contents h1 {
   font-size: calc(22px + 1vh); }
 
-.contents li {
+.contents li, .contents p {
   font-size: calc(17px + 0.8vh); }
+
+.contents p {
+  margin-left: 1em; }
 
 div.link {
   position: sticky;
