--- a/9364A-G6/src/css/style.css
+++ b/9364A-G6/src/css/style.css
@@ -1,9 +1,16 @@
 body {
   font-family: 'Hind';
-  background-color: #eddbcd !important; }
+  background-color: #eddbcd !important;
+  background-size: cover; }
+
+.emphasis {
+  color: red; }
+
+.emphasis2 {
+  color: green; }
 
 .code-sample {
-  background-color: #cccccc;
+  background-color: #e8e8e8;
   border: 1px solid #c98474;
   border-radius: 1em;
   padding: 1em 2em;
@@ -15,6 +22,12 @@ body {
     color: gray !important; }
   .code-sample .indent {
     margin-left: 1em; }
+  .code-sample .indent2 {
+    margin-left: 2em; }
+  .code-sample .indent3 {
+    margin-left: 3em; }
+  .code-sample .indent4 {
+    margin-left: 4em; }
 
 h3 {
   font-weight: bold; }
@@ -116,6 +129,8 @@ div .jumbotron {
   font-size: calc(17px + 0.8vh); }
 
 .contents p {
+  text-indent: 2.5em;
+  text-align: justify;
   margin-left: 1em; }
 
 div.link {
