Added code-snippets to CSS selectors and at-rules

--- a/9364A-G6/src/css/style.css
+++ b/9364A-G6/src/css/style.css
@@ -28,6 +28,9 @@ body {
     margin-left: 3em; }
   .code-sample .indent4 {
     margin-left: 4em; }
+  @media (max-width: 576px) {
+    .code-sample {
+      font-size: 3vw; } }
 
 h3 {
   font-weight: bold; }
