--- a/9364A-G6/src/scss/style.scss
+++ b/9364A-G6/src/scss/style.scss
@@ -32,6 +32,10 @@ body{
     .indent4{
         margin-left: 4em;
     }
+    
+    @media (max-width: 576px){
+        font-size: 3vw;
+    }
     background-color: #e8e8e8;
     border: 1px solid #c98474;
     border-radius: 1em;
