--- a/9364A-G6/src/scss/style.scss
+++ b/9364A-G6/src/scss/style.scss
@@ -13,6 +13,7 @@ body{
 }
 
 .code-sample{
+    display: none;
     .comment{
         color: gray !important;
     }
@@ -54,7 +55,7 @@ h3 {
     .heading1-img{
         margin-top: 4vw !important;
         margin-right: 4vw !important;
-        width: 70% !important;
+        width: 60% !important;
     }
 }
 
@@ -144,7 +145,7 @@ div{
         color: #eddbcd !important;
         font-weight: bold;
     }
-    z-index: 100;
+    z-index: 3000;
     width:100%;
     background-color: #c0b3a0 !important;
 
@@ -178,26 +179,13 @@ div{
     }
 }
 
-.navbar, .navbar-collapse {
-    ul li a{
-        text-align: center;
-
-    }
-}
-
 .heading1-img{
     margin-top: 0 !important;
     margin-right: 4vw !important;
     width: 50%;
 }
 
-.dropdown-menu {
-    background-color: #2C3531 !important;
 
-    .dropdown-divider{
-        background-color: #D1E8E2 !important;
-    }
-}
 
 .contents {
     h1 {
@@ -228,7 +216,6 @@ div.link{
     height: 4em;
     line-height: 3em;
     top: 3.7em;
-    float:inherit;
     overflow-y: hidden;
     overflow-x: hidden;
     text-align: center;
@@ -311,6 +298,12 @@ div.link{
     visibility: hidden;
 }
 
+.anchor2{
+    height: 16vh; /*same height as header*/
+    margin-top: 16vh; /*same height as header*/
+    visibility: hidden;
+}
+
 
 //TABLE
 
@@ -333,9 +326,3 @@ tr:nth-of-type(even) {
 }
 
 //
-.custom-toggler.navbar-toggler {
-    border-color: rgb(255,102,203);
-}
-.custom-toggler .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.7)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-}
